<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welocme_tv_manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/welcome_manual"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/welocme_tv_manual_detial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welocme_tv_manual"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:text="@string/welcome_manul_detial"
        android:textColor="@color/black"
        android:textSize="16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <EditText
            android:id="@+id/et_secret"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入授权码！"

            />


    </LinearLayout>
    <Button
        android:id="@+id/welcome_btn_start"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:text="@string/welcome_start"
        android:textSize="18sp" />

</LinearLayout>